<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="4dp"
        >
            <ImageView 
                android:id="@+id/record_imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                />
            <ImageButton 
                android:id="@+id/record_imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"
                />
        
        </LinearLayout>
        <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="1dp"
        >
	         <TextView 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/record_title_label"
		        style="?android:listSeparatorTextViewStyle"
		        />
		    <EditText
		        android:id="@+id/record_title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/record_title_hint">
		        <requestFocus />
		    </EditText>
        
        </LinearLayout>
        
    </LinearLayout>
	   
	    
	    
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_details_label"
        style="?android:listSeparatorTextViewStyle"
        />
        <Button
            android:id="@+id/record_date" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
        />
        <CheckBox
            android:id="@+id/record_solved" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:text="@string/record_solved_label"
        />
        <Button
            android:id="@+id/record_linkman_button" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:text="@string/records_linkman_choose"
        />
        <Button
            android:id="@+id/record_report_button" 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="16dp"
	        android:layout_marginRight="16dp"
	        android:text="@string/records_report_text"
        />

</LinearLayout>
